@@ -63,7 +63,7 @@ Bug Fixes:
 	Fixed check in games with multiple players on a team
 	Alert ignores human teams instead of AIs
 - Multiplayer
-	Fixed city-related alerts for Hot Seat games
+	City-related and Worst Enemy alerts work in Hot Seat games
 
 
 MODDING
@@ -87,6 +87,8 @@ Improvements:
 - Removed EntryPoints Modules
 	CvAppInterface, CvDiplomacyInterface, CvOptionsScreenCallbackInterface, and CvRandomEventInterface
 	If your mod needs to add code to any of these modules, use <export> and <extend> or use the original BTS modules as a base
+- PlayerUtil
+	players() and teams() now accept active parameter that restrict to players/teams that can become active
 
 Bug Fixes:
 
